@startuml
skinparam defaultFontSize 13
skinparam backgroundColor #IVORY
skinparam class {
  BackgroundColor #LIGHTBLUE
  ArrowColor #BLACK
  BorderColor #BLACK
  FontSize 15
}

class Gomoku {
  - boardConfig: BoardConfig
  - chain: MoveHandler
  + firstMark(Mark)
  + size(int)
  + periodicBoundaryConditionsInUse(boolean)
  + nextMove(Set<Move>, Mark)
}

class BoardConfig {
  + getInstance()
  + getSize()
  + isPeriodic()
  + isWinImmediatelyEnabled()
  + isBlockOpponentEnabled()
  + isForkCreationEnabled()
}

class BoardAdapter {
  + BoardAdapter(Set<Move>, BoardConfig)
  + toBoard(): Board
}

class Board {
  + getEmptyPositions()
  + placeMark(...)
  + isWinningMove(...)
  + clone()
}

interface MoveStrategy {
  + findMove(Board, Mark)
}

abstract class MoveHandler {
  + handle(Board, Mark)
  # doHandle(Board, Mark)
}

class HandlerChainBuilder {
  + addWinnerCheck()
  + addStrategy(MoveStrategy)
  + addResignCheck()
  + addDefault()
  + build(): MoveHandler
}

class WinnerCheckHandler extends MoveHandler
class StrategyHandler extends MoveHandler
class ResignHandler extends MoveHandler
class DefaultHandler extends MoveHandler

class WinImmediatelyStrategy implements MoveStrategy
class BlockOpponentStrategy implements MoveStrategy
class CreateForkStrategy implements MoveStrategy

Gomoku o-- BoardConfig
Gomoku o-- HandlerChainBuilder

Gomoku ..> BoardAdapter
BoardAdapter --> Board
BoardAdapter ..> BoardConfig

HandlerChainBuilder *-- MoveHandler

StrategyHandler *-- MoveStrategy

@enduml
